Script src breaks SSL/HTTPS pages for mixed content

--- a/googlesearch/templates/googlesearch/inclusion_tags/form.html
+++ b/googlesearch/templates/googlesearch/inclusion_tags/form.html
@@ -7,5 +7,5 @@
         <input type="text" name="q" />
         <input type="submit" name="sa" value="{% trans "Search" %}" />
     </form>
-    <script type="text/javascript" src="http://www.google.com/cse/brand?form=cref"></script>
+    <script type="text/javascript" src="//www.google.com/cse/brand?form=cref"></script>
 </div>    
